kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: public 
  rules:
    #- host: k8s.devopsdirective.com
    - http:
        paths:
          - path: /user-listener
            pathType: Prefix
            backend:
              service:
                name:  userlistenerservice
                port:
                  number: 8282
